23 November 2020: Wouter
	- Merge #351 from dvzrv: Add AF_NETLINK to set of allowed socket
	  address families.
	- Fix #350: with the AF_NETLINK permission, to fix 1.12.0 error:
	  failed to list interfaces: getifaddrs: Address family not
	  supported by protocol.
	- Fix #347: IP_DONTFRAG broken on Apple xcode 12.2.
	- Option to toggle udp-connect, default is enabled.

12 November 2020: Wouter
	- Fix to connect() to UDP destinations, default turned on,
	  this lowers vulnerability to ICMP side channels.
	- Retry for interfaces with unused ports if possible.

10 November 2020: Wouter
	- Fix #341: fixing a possible memory leak.
	- Fix memory leak after fix for possible memory leak failure.
	- Fix #343: Fail to build --with-libnghttp2 with error: 'SSIZE_MAX'
	  undeclared.

27 October 2020: Wouter
	- In man page note that tls-cert-bundle is read before permission
	  drop and chroot.

22 October 2020: Wouter
	- Fix #333: Unbound Segmentation Fault w/ log_info Functions From
	  Python Mod.
	- Fix that minimal-responses does not remove addresses from a priming
	  query response.

21 October 2020: George
	- Fix #327: net/if.h check fails on some darwin versions; contribution by
	  Joshua Root.
	- Fix #320: potential memory corruption due to size miscomputation upton
	  custom region alloc init.

21 October 2020: Wouter
	- Merge PR #228 : infra-keep-probing option to probe hosts that are
	  down.  Add infra-keep-probing: yes option. Hosts that are down are
	  probed more frequently.
	  With the option turned on, it probes about every 120 seconds,
	  eventually after exponential backoff, and that keeps that way. If
	  traffic keeps up for the domain. It probes with one at a time, eg.
	  one query is allowed to probe, other queries within that 120 second
	  interval are turned away.

19 October 2020: George
	- Merge PR #324 from James Renken: Add modern X.509v3 extensions to
	  unbound-control TLS certificates.
	- Fix for PR #324 to attach the x509v3 extensions to the client