@@ -6,6 +6,8 @@
 	  supported by protocol.
 	- Fix #347: IP_DONTFRAG broken on Apple xcode 12.2.
 	- Option to toggle udp-connect, default is enabled.
+	- Fix for #303 CVE-2020-28935 : Fix that symlink does not interfere
+	  with chown of pidfile.
 
 12 November 2020: Wouter
 	- Fix to connect() to UDP destinations, default turned on,
